# pcc_projects

./: README.md
alien_invasion/: .pre-commit-config.yaml  README.md  alien.py  alien_invasion.py  button.py  game_stats.py  pyproject.toml  scoreboard.py  settings.py  ship.py
data_visualisation/: .pre-commit-config.yaml  pyproject.toml
data_visualisation/part_1/: README.md  bar_plotly.html  die.py  mpl_squares.py  random_walk.py
data_visualisation/part_2/: README.md  earthquakes.py  global_earthquakes.html  sitka.py
data_visualisation/part_2/data_earthquakes/: eq_data_7_day_m1.json
data_visualisation/part_2/data_weather/: death_valley_2018_full.csv  sitka_weather_2018_full.csv
data_visualisation/part_3/: README.md  readable_hn_data.json  repo_stars.html  repos_nb.ipynb
web_app/: db.sqlite3  pyproject.toml
web_app/learning_log/: pyproject.toml
web_app/templates/: 404.html  500.html
web_app/users/: urls.py  views.py
web_app/users/templates/registration/: logged_out.html  login.html  register.html
web_app/web_app/: settings.py  urls.py
web_app/web_apps/: apps.py  forms.py  models.py  urls.py  views.py
web_app/web_apps/migrations/: 0001_initial.py  0002_entry.py  0003_topic_owner.py
web_app/web_apps/templates/web_apps/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
