[tool.poetry]
name = "data_visualisation"
version = "0.1.0"
description = ""
authors = ["silverscorpio <rajat.newtoneinstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.3"
plotly = "^5.10.0"
requests = "^2.28.1"
pre-commit = "^2.20.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
