[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["silverscorpio <rajat.newtoneinstein@gmail.com>"]
readme = "README.md"
packages = [{include = "web_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
ipython = "^8.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
